--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,3 +19,6 @@ services:
     restart: always
     ports:
       - 8181:8080
+    environment:
+      ADMINER_DESIGN: flat
+      ADMINER_PLUGINS: tables-filter tinymce edit-textarea edit-foreign enum-option frames edit-calendar
